--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,6 @@ DATABASE_URL=postgresql://ajali_user:ajali_password@localhost/ajali_dev
 SECRET_KEY=your-secret-key-here
 JWT_SECRET_KEY=your-jwt-secret-key-here
 FLASK_ENV=development
+CLOUDINARY_CLOUD_NAME=dpx7kstwf
+CLOUDINARY_API_KEY=826333217155912
+CLOUDINARY_API_SECRET=YfHEqt_CmEzkYa-uolMnmPhn2u0
