--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,10 +1,16 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.5
-Flask-JWT-Extended==4.5.3
-Flask-Bcrypt==1.0.1
-Flask-CORS==4.0.0
-psycopg2-binary==2.9.9
-python-dotenv==1.0.0
-cloudinary==1.36.0
-Werkzeug==2.3.7
+flask==2.0.1
+werkzeug==2.0.3
+flask-sqlalchemy==2.5.1
+sqlalchemy==1.4.23
+flask-migrate==3.1.0
+flask-jwt-extended==4.3.1
+flask-bcrypt==1.0.1
+flask-cors==3.0.10
+flask-mail==0.9.1
+psycopg2-binary==2.9.1
+python-dotenv==0.19.0
+twilio==7.8.0
+cloudinary==1.26.0
+gunicorn==20.1.0
+pytest==6.2.5
+alembic==1.7.1
